--- a/SDL_TouchFingerEvent.mediawiki
+++ b/SDL_TouchFingerEvent.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_TouchFingerEvent =
-A structure that contains touch finger motion,,/finger event structure,, ^information^.
+A structure that contains finger touch event information.
 
 
 == Data Fields ==
@@ -22,7 +22,7 @@ A structure that contains touch finger motion,,/finger event structure,, ^inform
 |-
 |SDL_FingerID
 |'''fingerId'''
-|description
+|
 |-
 |Uint8
 |'''state'''
@@ -30,26 +30,26 @@ A structure that contains touch finger motion,,/finger event structure,, ^inform
 |-
 |Uint16
 |'''x'''
-|description
+|^the x-axis location of the touch event^
 |-
 |Uint16
 |'''y'''
-|description
+|^the y-axis location of the touch event^
 |-
 |Uint16
 |'''dx'''
-|description
+|^the distance moved in the x-axis^
 |-
 |Uint16
 |'''dy'''
-|description
+|^the distance moved in the y-axis^
 |-
 |Uint16
 |'''pressure'''
-|description
+|^the quantity of pressure applied^
 |}
 
-<<Color2(green,Note that touchID is described as "the touch device index" in all 3 other similar functions.  Also note that SDL_TouchID and SDL_FingerID are not defined in this header.)>>
+<<Color2(green,Note that touchID is described as "the touch device index" in all 3 other similar functions.)>>
 
 == Code Examples ==
 ```c++
@@ -57,7 +57,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+[[SDL_TouchFingerEvent]] is a member of the [[SDL_Event]] union and is used when an event of type SDL_FINGERMOTION, SDL_FINGERDOWN, or SDL_FINGERUP is reported.  You would access it through the event's <code>tfinger</code> field.
 
 == Related Enumerations ==
 :[[SDL_EventType]]
