--- a/SGFunctions.mediawiki
+++ b/SGFunctions.mediawiki
@@ -756,7 +756,7 @@ The Footer section consists of a horizontal rule followed by two links separated
 
 
 === Special ===
-This section contains details for special formatting circumstances that affect several sections of a page at once but that don't affect every function page.
+This section contains details for special formatting circumstances that are best described separately.
 
 <span id="callback"></span>
 ==== Callback Functions ====
@@ -805,6 +805,37 @@ callback syntax
 
 ''Example'': [[SDL_LogSetOutputFunction]](), [[SDL_AddTimer]](), [[SDL_AddEventWatch]](), [[SDL_CreateThread]](), [[SDL_SetEventFilter]](), [[SDL_GetEventFilter]]()
 
+
+
+==== Compatibility Functions ====
+Compatibility functions are present in the API for backward compatibility only and thus are treated slightly differently than functions from the current version.  '''Use the above guidelines for formatting pages in <code>CategoryCompat</code> with the following exceptions''':
+
+''Action 1'': The top of every compatibility function page should include the following, verbatim, to be placed below the pragma markup, below <<Color2(red,DRAFT)>> if present, and above the page title:
+ ```
+||<tablewidth="100%" #000000 style="color: #FF8C00;" :> <<BR>>~+For Backward Compatibility Only+~<<BR>><<BR>> ||
+```
+
+''Action 2'': 
+ ||<( 30%>''If'' SDL 1.3 __includes one or more functions that have replaced__ the compatibility function||''Action'': See ''Markup A'' below.||
+ ||<( 30%>''If'' SDL 1.3 __does NOT include any equivalent function__||''Action'': See ''Markup B'' below.||
+<br/>
+: ''Markup A'': Add the following section to the end of the page above the footer, and replace <code>SDL_Function</code> with the name of the function in SDL 1.3 that has replaced the compatibility function on that page:
+  ```
+== SDL 1.3 Replacement(s) ==
+'''<<Color2(black,Darkorange,This function has been replaced by the following in SDL 1.3:)>>'''
+ .[[SDL_Function]]
+```
+: ''Note'': ''If'' more than 1 function in SDL 1.3 has replaced the SDL 1.2 function, create a list placing the most direct counterpart (or pair) first and alphabetizing any additional functions below that using the same markup for each additional function.  
+* Please avoid making this list any larger than necessary.  This is NOT a related functions list!
+: ''Example'': [[SDL_AudioDriverName]](), [[SDL_WM_ToggleFullScreen]]()
+<br/>
+: ''Markup B'': Add the following section to the end of the page above the footer, and replace <code>Other alternate here</code> with text describing other options in 1.3 that could be used to accomplish the same goal (see other compat pages for examples):
+  ```
+== SDL 1.3 Replacement(s) ==
+'''<<Color2(black,Darkorange,There are currently no equivalent functions in SDL 1.3.)>>'''
+Other alternate here
+```
+: ''Example'': [[SDL_EnableKeyRepeat]]()
 
 
 
