update content - callback (in progress)

--- a/SGFunctions.mediawiki
+++ b/SGFunctions.mediawiki
@@ -762,11 +762,11 @@ This section contains details for special formatting circumstances that are best
 ==== Callback Functions ====
 The presence of a callback function will affect two (2) sections of the main function's page - Function Parameters and Remarks.
 
-''Action'': '''Use the following formatting specifics in addition to those listed for the main function [[#Function Parameters|above]] whenever a callback function is included on a function page:'''
+''Action 1'': '''Use the following formatting specifics in addition to those listed for the main function [[#Function Parameters|above]] whenever a callback function is included on a function page:'''
 
 {|
 |
-|<bgcolor="#EDEDED">''Function Parameters Section''
+|<bgcolor="#EDEDED">''Function Parameters Section Formatting Details''
 |-
 |<( |3 30%>For the parameter that refers to the __callback__ function
 |''Action'': Use the following wording, modified as necessary, to describe the parameter:<br/><code>the</code> <code>function</code> <code>to</code> <code>call</code> <code><when</code><code>/</code><code>why>;</code> <code>see</code> <code>[[#Remarks|Remarks]]</code> <code>for</code> <code>details</code><br/>where the text in <code><></code> is replaced with an appropriate description of when or why the callback would be called.
@@ -775,7 +775,7 @@ The presence of a callback function will affect two (2) sections of the main fun
 |-
 |''Example'': [[SDL_LogSetOutputFunction]](), [[SDL_AddEventWatch]](), [[SDL_CreateThread]](), [[SDL_SetAssertionHandler]]()
 |-
-|<( |4 30%>For the parameter that carries __user data__ to the callback
+|<( |4 30%>For the parameter that passes __user data__ to the callback
 |<span id="UserData"></span>''Action'': Use the following wording, modified as necessary, to describe the parameter:<br/><code>a</code> <code>pointer</code> <code>that</code> <code>is</code> <code>passed</code> <code>to</code> <code>'''callback'''</code><br/>where <code>callback</code> is replaced with the callback function parameter name (if necessary).
 |-
 |''Note'': In rare cases, often 'Get' functions, this is a pointer to a pointer and should be described as<br/><code>a</code> <code>pointer</code> <code>to</code> <code>a</code> <code>pointer</code> <code>that</code> <code>is</code> <code>passed</code> <code>to</code> <code>'''callback'''</code> instead.
@@ -785,7 +785,7 @@ The presence of a callback function will affect two (2) sections of the main fun
 |''Example'': [[SDL_LogSetOutputFunction]](), [[SDL_CreateThread]](), [[SDL_AddTimer]](), [[SDL_LogGetOutputFunction]]()
 |-
 |<( |2 30%>For other parameters __related to the callback__
-|''Action'': There may be other parameters that are passed to the callback function but which are sufficiently different from the __[[#UserData|user data]]__ concept that the wording above does not really apply.  In these cases use a description that is appropriate.  Often it will still be appropriate to include the phrase <code>passed to</code> <code>'''callback'''</code> in these descriptions, though.
+|''Action'': There may be other parameters that are passed to the callback function but which are sufficiently different from the __[[#UserData|user data]]__ concept that the wording above does not really apply.  In these cases use a description that is appropriate.  Often it will still be appropriate to include the phrase <code>passed to</code> <code>'''callback'''</code> in these descriptions.
 |-
 |''Example'': [[SDL_AddTimer]](), [[SDL_SetTimer]]()
 |-
@@ -793,51 +793,10 @@ The presence of a callback function will affect two (2) sections of the main fun
 |<span id="notCallback"></span>''Action'': Follow any applicable guidelines listed [[#Function Parameters|above]]
 |-
 |''Example'': [[SDL_CreateThread]]()
-|-
-|
-|<bgcolor="#EDEDED">''Remarks Section''
-|-
-|<( 30%>For the basic text and format for displaying the __callback function syntax and parameters__
-|''Action'': '''See ''Markup'' immediately below this table and the remainder of this section for details...'''
-|-
-|<( 30%>__Location__
-|''Action'': Generally the callback details should be located at the top of the Remarks section, but below any fundamental or critical remarks about the main function, if present.
-|-
-|<( 30%>__Alignment__
-|''Action'': Only the first line should be left-justified.  Everything else related directly to the callback should be [http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Indenting indented] one level (or more) under that line to indicate it's relationship to the callback as opposed to the main function.
-|-
-|<( 30%>''If'' the callback parameter is __not '''callback'''__
-|''Action'': Replace '''callback''' with the function parameter name used in the main function to refer to the callback function.
-|-
-|<( 30%>__<code>callback syntax</code>__
-|''Action'': Replace <code>callback syntax</code> with the callback function's syntax formatted the same as the main function's syntax (see [[#Syntax|Syntax]] above).
-|-
-|<( |2 30%>''If'' the __callback function name__ requires any explanation
-|''Action'': Replace "where its __parameters__ are:" with the following:<br/><code>where</code> <code><CallbackName></code> <code>is</code> <code><some</code> <code>explanation></code> <code>and</code> <code>its</code> <code>parameters</code> <code>are:</code><br/>replacing <code><Callbackname></code> with the name of the callback function and <code><some</code> <code>explanation></code> with an explanation of the name.
-|-
-|''Example'': [[SDL_AddEventWatch]]()
-|-
-|<( |3 30%>__<code>
-|callback parameter
-|</code>description<code>
-|</code>__
-|''Action 1'': Duplicate the line for each parameter in the callback (ie: there should be 2 lines for 2 parameters).
-|-
-|''Action 2'': Replace <code>callback parameter</code> with the name of each callback function parameter using the same formatting instructions as the main function '''''except''''' use ```<code>monospace</code>``` (surrounding backticks) rather than bold to highlight the parameter names in the first column.
-|-
-|''Action 3'': Replace "description" with an appropriate description of the callback's parameter. See the following for specific parameters.
-|-
-|<( 30%>For the __<code>userdata</code>__ parameter (or comparable)
-|''Action'': Use the following text (modified as necessary):<br/>```what was passed as '''userdata''' to [[SDL_MainFunctionName]]()```<br/>replacing <code>MainFunctionName</code> with the name of the primary function on the page.
-|-
-|<( 30%>''If'' there is __"optional discussion or details"__
-|''Action'': Replace that text with any relevant information about the callback function.  Be sure to indent any additional text at least one level.
-|-
-|
-|<(>''Example'': [[SDL_LogSetOutputFunction]](), [[SDL_AddTimer]](), [[SDL_AddEventWatch]](), [[SDL_CreateThread]](), [[SDL_SetEventFilter]](), [[SDL_GetEventFilter]]()
 |}
 
-: ''Markup'': To detail the syntax and parameters of the callback function use:
+<span id="prototype"></span>
+''Action 2'': '''Detail the syntax and parameters of the callback function in the Remarks section using the following __basic format__ with the changes listed in the table below:'''
    ```{
 The function prototype for '''callback''' is:
  {{{#!highlight cpp
@@ -845,7 +804,8 @@ callback syntax
 ```
 : where its parameters are:
  ||<code>callback parameter</code>||description||
-: optional discussion or details...
+: optional return value info...
+: optional remarks or details...
 }}}}
 : to display
 The function prototype for '''callback''' is:
@@ -854,11 +814,63 @@ callback syntax
 ```
 : where its parameters are:
  ||<code>callback parameter</code>||description||
-: optional discussion or details...
+: optional return value info...
+: optional remarks or details...
+
+{|
+|
+|<bgcolor="#EDEDED">''Remarks Section Formatting Details''
+|-
+|<( |2 30%>__Location__
+|''Action'': Generally the callback details should be located at the top of the Remarks section, but below any fundamental or critical remarks about the main function, if present.  But, logic should prevail in determining where to place this information if the Remarks section is large. This is not a hard and fast rule.
+|-
+|''Example'': [[SDL_CreateThread]](), [[SDL_AddEventWatch]](), [[SDL_SetAssertionHandler]]()
+|-
+|<( 30%>__Alignment__
+|''Action'': As shown in the [#prototype|basic format]] above, only the first line should be left-justified.  Everything else related directly to the callback should be [[http://wiki.libsdl.org/moin.cgi/SGWikiBasics#Indenting indented] one level (or more) to indicate it's relationship to the callback as opposed to the main function.
+|-
+|<( |2 30%>''If'' the callback parameter is __not '''callback'''__
+|''Action'': Replace '''callback''' in the [[#prototype|basic format]] above with the function parameter name used in the main function to refer to the callback function.
+|-
+|''Example'': [[SDL_SetEventFilter]](), [[SDL_CreateThread]](), [[SDL_SetAssertionHandler]]()
+|-
+|<( 30%>For __"callback syntax"__ in the [[#prototype|basic format]] above
+|''Action'': Replace "callback syntax" with the callback function's syntax formatted the same as the main function's syntax. (See [[#Syntax|Syntax]] above for details.)
+|-
+|<( |2 30%>''If'' the __callback function name__ requires any explanation
+|''Action'': Replace "where its __parameters__ are:" in the [[#prototype|basic format]] above with the following:<br/><code>where</code> <code><CallbackName></code> <code>is</code> <code><some</code> <code>explanation></code> <code>and</code> <code>its</code> <code>parameters</code> <code>are:</code><br/>replacing <code><Callbackname></code> with the name of the callback function and <code><some</code> <code>explanation></code> with an explanation of the name (ie: your function name).
+|-
+|''Example'': [[SDL_AddEventWatch]]()
+|-
+|<( |4 30%>For __| <code>callback parameter</code> | description |__ in the [[#prototype|basic format]] above
+|''Action 1'': Duplicate the line from above for each parameter in the callback (ie: there should be 2 lines for 2 parameters).
+|-
+|''Action 2'': Replace "callback parameter" with the name of each callback function parameter using the same formatting instructions as the main function '''''except''''' use ```<code>monospace</code>``` (surrounding backticks) rather than bold to highlight the parameter names in the first column.
+|-
+|''Action 3'': Replace "description" with an appropriate description of the callback's parameter. See the following for specific parameters.
+|-
+|''Example'': [[SDL_FilterEvents]](), [[SDL_LogSetOutputFunction]]()
+|-
+|<( |2 30%>For the __<code>userdata</code>__ parameter (or comparable)
+|''Action'': Use the following text (modified as necessary):<br/>```what was passed as '''userdata''' to [[SDL_MainFunctionName]]()```<br/>replacing '''userdata''' with the appropriate parameter name if necessary, and replacing <code>MainFunctionName</code> with the name of the primary function on the page.
+|-
+|''Example'': [[SDL_AddEventWatch]](), [[SDL_AddTimer]]()
+|-
+|<( |3 30%>''If'' the callback function's __return value__ is important
+|''Action 1'': Replace "optional return value info..." in the [[#prototype|basic format]] above with the relevant return value information.  Be sure to indent text one level as shown.
+|-
+|''Note'': Callback return value information may be omitted if it is not important.
+|-
+|''Example'': [[SDL_AddEventWatch]](), [[SDL_AddTimer]]()
+|-
+|<( |2 30%>''If'' there are __"optional remarks or details"__
+|''Action'': Replace "optional remarks or details..." in the [[#prototype|basic format]] above with any other relevant information about the callback function.  Be sure to indent text at least one level as shown.
+|-
+|''Example'': [[SDL_LogGetOutputFunction]](), [[SDL_LogSetOutputFunction]]()
+|}
 
 
-<!-- #Need to distribute examples and reword left column better. -->
-
+<br/>
 
 
 ==== Compatibility Functions ====
