--- a/Tutorials.mediawiki
+++ b/Tutorials.mediawiki
@@ -16,11 +16,15 @@ There are a number of SDL tutorials available from different sources.
 : A tutorial on enabling and using GLSL extensions with SDL.
 : Check out http://hg.libsdl.org/SDL/file/default/test/testshader.c also.
 
+=== OpenGL ===
 * [http://www.g-truc.net/post-0204.html OpenGL 3 Samples Pack]
 : Using SDL 1.3 beta with OpenGL 3
 
 * [http://www.opengl.org/wiki/Tutorial1:_Creating_a_Cross_Platform_OpenGL_3.2_Context_in_SDL_(C_/_SDL) OpenGL 3.2 and SDL]
 : Creating a Cross Platform OpenGL 3.2 Context in SDL
+
+* [http://iphonesdkdev.blogspot.com/2009/04/opengl-es-for-iphone-simple-tutorial.html OpenGL ES for iPhone : A Simple Tutorial]
+: A brief introduction to OpenGL ES
 
 == Haptic ==
 
